tests/snapshots/examples_fixtures/Modules__Day12Parser.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Day12Parser.flx
== compile ==
failed (module)
== diagnostics ==
Error[E024]: Module Path Mismatch

Module name `Modules.Day12Parser` doesn't match file path `examples/Modules/Day12Parser.flx`.

  examples/Modules/Day12Parser.flx:1:1
  |
1 | module Modules.Day12Parser {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
