tests/snapshots/examples_fixtures/Modules__Day12Solver.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Day12Solver.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.Day12Solver` doesn't match file path `examples/Modules/Day12Solver.flx`.

  examples/Modules/Day12Solver.flx:6:1
  |
6 | module Modules.Day12Solver {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
