tests/snapshots/examples_fixtures/Modules__MapUtils.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/MapUtils.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.MapUtils` doesn't match file path `examples/Modules/MapUtils.flx`.

  examples/Modules/MapUtils.flx:10:1
   |
10 | module Modules.MapUtils {
   | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
