tests/snapshots/examples_fixtures/Modules__Math.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Math.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.Math` doesn't match file path `examples/Modules/Math.flx`.

  examples/Modules/Math.flx:1:1
  |
1 | module Modules.Math {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
