tests/snapshots/examples_fixtures/Modules__StringUtils.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/StringUtils.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.StringUtils` doesn't match file path `//?/examples/Modules/StringUtils.flx`.

  examples/Modules/StringUtils.flx:1:1
  |
1 | module Modules.StringUtils {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
